    ---------------------
    * Chinese (Traditional) translation
      Song Huang <songhuang@users.sourceforge.net>

    * Dutch translation
      Freek de Kruijf <f.de.kruijf@hetnet.nl>

    * Malay translation
      Muhammad Najmi Ahmad Zabidi <najmi.zabidi@gmail.com>

    * Russian translation
      Nikolay Parukhin <parukhin@gmail.com>
      Sergei Popov <skein@rambler.ru>

    * Songhay translation
      Abdoul Cisse <abdoulseydou@hotmail.com>


2009.June.28 (0.9.21)
  * New Starters:
    -------------
    * Silver Frame
      Caroline Ford <caroline.ford.work@googlemail.com>

    * Jigsaw 3x3 & 5x5
      Andrew 'akanewbie' Corcoran <akanewbie@gmail.com>

  * New Magic Tools:
    ----------------
    * + Blur (entire image mode) - Blurs entire image
      + Color Shift - Modifies the colors in the image.
      + Sharpen - Sharpens entire image
      + Edges - Traces the edges of the image, over a white background.
      + Silhouette - Creates an outline of the image, over a black background.
      + Color and White - Turns image pure color & white (no grey or color).
      + Snow Ball - Places random snow balls over the image.
      + Snow Flake - Places random snow flakes over the image.
      + Noise - Adds random noise to the image.
      + Mosaic - Gives the image a mosaic effect.
      + Rain - Adds rain drops to the image.
      + Toothpaste - Squirts "toothpaste" on to the image.
      By Andrew 'akanewbie' Corcoran <akanewbie@gmail.com>
      (Part of Tux4Kids' participation in Google Summer of Code 2008)

    * + Confetti - Paints random confetti bits on the canvas.
      + TV - Adds television (CRT) interlacing lines over the image.
      + Rosette - Paints at 3 points on the screen, in a rosette shape.
      + Picasso - Paints at 3 points, in a "Picasso" art style.
      + Wavelets - Waves that go up and down.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      (Part of Tux4Kids' participation in Google Summer of Code 2008)
